<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/menu_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_requests"
        android:icon="@drawable/menu_notifications"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_clients"
        android:icon="@drawable/menu_users"
        android:title="@string/title_clients" />

    <item
        android:id="@+id/navigation_drivers"
        android:icon="@drawable/menu_driver"
        android:title="@string/title_drivers" />

    <item
        android:id="@+id/navigation_ambulances"
        android:icon="@drawable/menu_ambulance"
        android:title="@string/title_ambulances" />
</menu>