<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1ADEDEDE"
    android:orientation="vertical"
    android:padding="15dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/form_input"
        android:hint="@string/conditions_of_patient"
        app:helperText="@string/request_details">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/request_details"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="start"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/close_window"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/close_window"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_create_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_request"
            android:textAllCaps="false" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>