<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1ADEDEDE"
    android:orientation="vertical"
    android:padding="15dp">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/form_input"
        android:hint="@string/request_info">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/request_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="start"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/form_input"
        android:hint="@string/vehicle_no">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vehicle_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_close_window"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/close_window"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_close_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mark_as_complete"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_reject_request"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/reject_request"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_accept_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept_request"
            android:textAllCaps="false"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_get_info"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="?attr/colorPrimary"
            android:src="@drawable/icon_info"
            android:tint="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>