<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".auth.CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_weight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:drawable/picture_frame" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/attach_camera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_camera"
                    android:tint="?attr/colorPrimary" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/form_input"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/form_input"
                android:hint="@string/mobile_contact">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile_contact"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--date of birth and gender-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--date of birth-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/form_input"
                        android:hint="@string/date_of_birth">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/date_of_birth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--user gender-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_gender"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/user_gender">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--district of location-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/form_input"
                android:hint="@string/location_district">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_location_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--village of location-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/form_input"
                android:hint="@string/location_village">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_location_village"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/has_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/have_account"
        android:textColor="?attr/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />


</androidx.appcompat.widget.LinearLayoutCompat>